ci(runners): switch to m1

--- a/.github/workflows/test-desktop.yml
+++ b/.github/workflows/test-desktop.yml
@@ -181,7 +181,7 @@ jobs:
 
   e2e-tests-mac:
     name: "Live Desktop Tests (macOS X)"
-    runs-on: [ledger-live, macos]
+    runs-on: [m1, ARM64]
     outputs:
       status: ${{ steps.test-desktop.outputs.outcome }}
     env:
