ci(runners): switch to m1

--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -42,7 +42,7 @@ jobs:
       LANGUAGE: en_US.UTF-8
       LC_ALL: en_US.UTF-8
     outputs:
-      status: ${{ step.detox.outcome }}
+      status: ${{ steps.detox.outcome }}
     steps:
       - uses: actions/checkout@v3
         with:
