--- a/.github/workflows/healthchecks-runners.yaml
+++ b/.github/workflows/healthchecks-runners.yaml
@@ -178,7 +178,7 @@ jobs:
         id: checkout
         with:
           ref: main
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ github.token }}
   checks-windows:
     runs-on: [ledger-live, windows]
     outputs:
@@ -250,7 +250,7 @@ jobs:
         id: checkout
         with:
           ref: main
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ github.token }}
   checks-macos:
     runs-on: [m1, ARM64]
     outputs:
@@ -335,7 +335,7 @@ jobs:
         id: checkout
         with:
           ref: main
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ github.token }}
   report:
     needs: [checks-linux, checks-windows, checks-macos]
     if: always()
