--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -10,9 +10,6 @@ on:
       - hotfix
   workflow_dispatch:
     inputs:
-      sha:
-        description: the head sha to target the correct check run
-        required: false
       ref:
         description: the branch which triggered this workflow
         required: true
@@ -72,7 +69,7 @@ jobs:
           echo "${{ github.run_id }}"
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.event.push.head.sha }}
+          ref: ${{ inputs.ref || github.event.push.head.sha }}
       - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
@@ -116,7 +113,7 @@ jobs:
           echo "${{ github.run_id }}"
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref  || github.event.push.head.sha }}
+          ref: ${{ inputs.ref  || github.event.push.head.sha }}
       - name: Update path
         run: |
           echo "C:\Program Files\Git\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -159,7 +156,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref  || github.event.push.head.sha }}
+          ref: ${{ inputs.ref  || github.event.push.head.sha }}
           persist-credentials: false
       - name: Set git user
         run: |
@@ -201,7 +198,7 @@ jobs:
         build-desktop-app-windows,
       ]
     runs-on: ubuntu-latest
-    if: always() && !cancelled() && github.event_name == 'workflow_dispatch' && inputs.sha != ''
+    if: always() && !cancelled() && github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/github-script@v6
         name: build summary
