--- a/.github/workflows/test-desktop.yml
+++ b/.github/workflows/test-desktop.yml
@@ -10,9 +10,6 @@ on:
       - hotfix
   workflow_dispatch:
     inputs:
-      sha:
-        description: the head sha to target the correct check run
-        required: false
       ref:
         description: the branch which triggered this workflow
         required: true
@@ -35,7 +32,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.ref }}
+          ref: ${{ inputs.ref || github.ref }}
       - uses: ./tools/actions/composites/setup-test-desktop
         id: setup-test-desktop
       - name: TurboRepo local caching server
@@ -61,7 +58,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.ref }}
+          ref: ${{ inputs.ref || github.ref }}
       - uses: ./tools/actions/composites/setup-test-desktop
         id: setup-test-desktop
       - name: TurboRepo local caching server
@@ -126,7 +123,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.ref }}
+          ref: ${{ inputs.ref || github.ref }}
       - uses: ./tools/actions/composites/setup-test-desktop
         id: setup-test-desktop
       - name: Install node-gyp globally
@@ -161,7 +158,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.ref }}
+          ref: ${{ inputs.ref || github.ref }}
       - uses: ./tools/actions/composites/setup-test-desktop
         id: setup-test-desktop
         with:
@@ -194,7 +191,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.ref }}
+          ref: ${{ inputs.ref || github.ref }}
       - uses: ./tools/actions/composites/setup-test-desktop
         id: setup-test-desktop
         with:
@@ -216,11 +213,11 @@ jobs:
     needs:
       [typecheck, unit-tests, e2e-tests-linux, e2e-tests-windows, e2e-tests-mac]
     runs-on: ubuntu-latest
-    if: always() && !cancelled() && github.event_name == 'workflow_dispatch' && inputs.sha != ''
+    if: always() && !cancelled() && github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.ref }}
+          ref: ${{ inputs.ref || github.ref }}
       - name: download images artifacts
         uses: actions/download-artifact@v3
         with:
@@ -377,7 +374,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.sha || inputs.ref || github.ref }}
+          ref: ${{ inputs.ref || github.ref }}
       - name: Download Allure Report - Windows
         uses: actions/download-artifact@v3
         with:
