--- a/.github/workflows/test-mobile-e2e.yml
+++ b/.github/workflows/test-mobile-e2e.yml
@@ -269,7 +269,7 @@ jobs:
             const report = {
               ios: {
                 pass: ${{ needs.detox-tests-ios.outputs.status == 'success' }},
-                status: "${{ needs.e2e-tests-mac.outputs.status }}",
+                status: "${{ needs.detox-tests-ios.outputs.status }}",
               },
               // TODO: Android
             };
