chore: upgrade turborepo to 1.7.2

--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "bump": "changeset version",
     "prerelease": "pnpm run build:libs",
     "release": "changeset publish",
-    "build": "pnpm turbo build --no-daemon --ignore=apps/* --ignore=apps\\* --ignore=tools/actions/* --ignore=tools\\actions\\* --no-deps",
-    "build:libs": "pnpm turbo build --no-daemon --filter=\"!./apps/**\" --scope=@ledgerhq/* --include-dependencies --no-deps",
-    "build:libs:force": "pnpm -r --filter=\"!./apps/**\" --filter=\"!ledger-live\" build",
-    "build:actions": "pnpm turbo build --filter=@actions/* --no-deps",
+    "build:libs": "pnpm turbo build --no-daemon --filter=\"./libs/**\"",
+    "build:libs:force": "pnpm -r --filter=\"./libs/**\" build",
+    "build:actions": "pnpm turbo build --filter=@actions/*",
     "build:cli": "pnpm turbo build --no-daemon --filter=live-cli",
     "build:llc": "pnpm turbo build --no-daemon --filter=\"live-common\"",
     "build:lld": "pnpm turbo build --no-daemon --filter=ledger-live-desktop",
@@ -41,7 +40,7 @@
     "dev:llm": "pnpm turbo start --no-daemon --filter=live-mobile",
     "release:lld": "pnpm turbo release --no-daemon --filter=ledger-live-desktop",
     "pre:lld": "pnpm turbo pre-build --no-daemon --filter=ledger-live-desktop",
-    "nightly": "pnpm turbo nightly --no-daemon --include-dependencies --no-deps",
+    "nightly": "pnpm turbo nightly --no-daemon",
     "nightly:lld": "pnpm turbo nightly --no-daemon --filter=ledger-live-desktop",
     "test": "pnpm turbo test --no-daemon --concurrency=100%",
     "run:cli": "./apps/cli/bin/index.js",
@@ -103,7 +102,7 @@
     "migrate-branch": "workspace:*",
     "pnpm-utils": "workspace:*",
     "rimraf": "^4.1.2",
-    "turbo": "^1.6.1",
+    "turbo": "^1.7.2",
     "zx": "^7.0.7"
   },
   "pnpm": {
