--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -97,6 +97,7 @@
     "@react-native-firebase/remote-config": "^14.11.1",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/core": "^6.4.6",
     "@react-navigation/devtools": "^6.0.10",
     "@react-navigation/elements": "^1.3.6",
     "@react-navigation/material-top-tabs": "^6.3.0",
@@ -106,6 +107,8 @@
     "@segment/sovran-react-native": "^0.4.4",
     "@sentry/cli": "^2.5.2",
     "@sentry/react-native": "^4.2.4",
+    "@shopify/react-native-performance": "^4.1.2",
+    "@shopify/react-native-performance-navigation": "^3.0.0",
     "asyncstorage-down": "^4.2.0",
     "axios": "^0.26.0",
     "bignumber.js": "^9.1.0",
@@ -201,6 +204,7 @@
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5",
     "text-encoding-polyfill": "^0.6.7",
+    "tslib": "^2.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
